--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 REACT_APP_NEWS_SLICE_API_KEY=2af82ba10a2441b595ea3d49af5c061e
 REACT_APP_EXCHANGE_API_KEY=7886f351681e76156015a5f4
+
+REACT_APP_API_URL='https://api.openweathermap.org/data/2.5'
+REACT_APP_API_KEY=3e341653c4dac201e77b642dd510e0ca
+REACT_APP_ICON_URL='https://openweathermap.org/img/w'
